[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kirk-hill-coop-home-assistant"
version = "0.3.0"
description = "Kirk Hill Coop custom integration for Home Assistant"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-homeassistant-custom-component>=0.13.205",
]

[tool.pytest.ini_options]
addopts = "--force-enable-socket"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
